# handmade_thrash

./: .gitignore  CMakeLists.txt  README.md  build.sh  dev_path.bat
.zed/: debug.json  tasks.json
src/: handmade.cpp
src/misc/: experimenting.cpp  experimenting.h
